<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".front.ResultActivity">

    <LinearLayout
        android:id="@+id/winner_layout"
        android:layout_width="213dp"
        android:layout_height="472dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winners"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/looser_layout"
        android:layout_width="194dp"
        android:layout_height="474dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/winner_layout"
        app:layout_constraintTop_toBottomOf="@+id/loosers"
        app:layout_constraintVertical_bias="1.0"></LinearLayout>

    <TextView
        android:id="@+id/winners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winners"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="@+id/winner_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/winning_team_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winner_is"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/winning_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/winning_team_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/winning_team_label"
        app:layout_constraintTop_toTopOf="@+id/winning_team_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loosers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loosers"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toEndOf="@+id/winners"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />
</androidx.constraintlayout.widget.ConstraintLayout>